--- a/geppetto/Info.plist
+++ b/geppetto/Info.plist
@@ -22,6 +22,8 @@
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>.readWrite</string>
 	<key>NSCameraUsageDescription</key>
 	<string>Allow camera access to take pictures</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
