Environments Prod and Dev - schemes and firebase.

--- a/geppetto/Firebase/Prod/GoogleService-Info.plist
+++ b/geppetto/Firebase/Prod/GoogleService-Info.plist
@@ -19,15 +19,15 @@
 	<key>STORAGE_BUCKET</key>
 	<string>fir-teste-56475.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:748402825926:ios:4087a2351a85d4cb3195c7</string>
 	<key>DATABASE_URL</key>
