--- a/geppetto/Info.plist
+++ b/geppetto/Info.plist
@@ -84,5 +84,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>shouldDisplayAds</key>
+	<false/>
 </dict>
 </plist>
